Overhaul about page - Adapt bootstraps HTML - Move snippets into includable files to reduce code duplication and avoid hard to read code - General fixes and improvements

--- a/_assets/stylesheets/about.scss
+++ b/_assets/stylesheets/about.scss
@@ -1,3 +1,7 @@
 /*
  *= require bootstrap/dist/css/bootstrap
  */
+
+body {
+  padding-top: 50px;
+}
